fix: perfect alignment

--- a/frontend/src/components/HourTicks.scss
+++ b/frontend/src/components/HourTicks.scss
@@ -1,5 +1,5 @@
 .hourticks {
-  width: 60px;
+  width: 50px;
   height: 500px;
   display: flex;
   flex-direction: column;
